Fix tooltip hover flicker (SCRD-6923)
- Move OverlayTrigger to surround the clickable span

--- a/src/styles/pages/AssignServerRoles.less
+++ b/src/styles/pages/AssignServerRoles.less
@@ -105,6 +105,7 @@
     .tab-pane {
       margin-top: 0.5em;
       max-height: 36em;
+      overflow: auto;
     }
     &.server-dropzone{
       margin: 2px;
